[package]
name = "teamcity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
git2 = "0.16.1"
arboard = { version = "3.2.0", default-features = false }
clap = { version = "4.0.29", features = ["derive", "env"] }
clap_complete = "4.0.6"
console = "0.15.2"
prettytable-rs = { version = "^0.10", default-features = false }
chrono = "0.4.23"
skim = { version = "*", default-features = false }
struct-field-names-as-array = "0.1.4"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
directories = "4.0"
serde_yaml = "0.9.16"
derive_builder = "0.12.0"
colored_json = "3.0.1"
