[package]
name = "teamcity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.16"
git2 = "^0.18"
clap = { version = "4.0.29", features = ["derive", "env"] }
clap_complete = "4.0.6"
console = "0.15.2"
prettytable-rs = { version = "^0.10", default-features = false }
chrono = "0.4.23"
skim = { version = "*", default-features = false }
struct-field-names-as-array = "^0.2"
config = { version = "0.13.1", default-features = false, features = ["yaml"] }
anyhow = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
directories = "5.0"
derive_builder = "0.12.0"
colored_json = "3.0.1"
url = { version = "2.4.1", features = ["serde"] }
derive_more = "0.99.17"
clap-verbosity-flag = "2.0.1"
tracing-log = "0.1.3"
recap = "0.1.2"
